--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow: visible;
 }
 
 body {
@@ -47,6 +48,7 @@ header {
 }
 
 .nav ul li {
+  position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   line-height: 78px;
@@ -68,5 +70,28 @@ header {
 
 .nav .account {
   width: 15%;
+}
+
+li:nth-child(1):hover .links_account {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  opacity: 1;
+}
+
+.links_account {
+  position: absolute;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  width: 200px;
+  height: 350px;
+  top: 88px;
+  left: 0;
+  background-color: #111213;
+  z-index: 1000;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  opacity: 0;
 }
 /*# sourceMappingURL=style.css.map */
