--- a/style.css
+++ b/style.css
@@ -322,12 +322,22 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: red;
   height: auto;
   padding: 40px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+main > div {
+  -webkit-box-shadow: 1px 1px 2px white;
+          box-shadow: 1px 1px 2px white;
+  border-radius: 20px;
+}
+
+main > div:hover {
+  -webkit-box-shadow: 2px 2px 10px #3d8bff;
+          box-shadow: 2px 2px 10px #3d8bff;
 }
 
 .profil {
@@ -435,6 +445,10 @@ main {
   color: #3d8bff;
 }
 
+.add_asset:hover span {
+  color: #3d8bff;
+}
+
 .add_asset p {
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
@@ -445,6 +459,8 @@ main {
 
 .add_asset p span {
   font-size: 32px;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .asset_item {
@@ -493,6 +509,29 @@ main {
   header h2 {
     display: none;
     visibility: hidden;
+  }
+  main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main > div {
+    -webkit-box-shadow: 1px 1px 2px white;
+            box-shadow: 1px 1px 2px white;
+    border-radius: 20px;
+    width: 80vw;
+    margin-bottom: 50px;
+  }
+  main > div:hover {
+    -webkit-box-shadow: 2px 2px 10px #3d8bff;
+            box-shadow: 2px 2px 10px #3d8bff;
+  }
+  .transactions, .profil, .asset {
+    width: 90vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
