--- a/style.scss
+++ b/style.scss
@@ -230,10 +230,18 @@ main{
     animation-delay: 3s;
     animation-fill-mode: both;
     display: flex;
-    background-color: red;
     height: auto;
     padding: 40px;
     justify-content: space-between;
+    
+    & > div{
+        box-shadow: 1px 1px 2px white;
+        border-radius: 20px;
+
+        &:hover{
+            box-shadow: 2px 2px 10px $survol;
+        }
+    }
 }
 
 .profil{
@@ -315,6 +323,9 @@ main{
     &:hover p {
         color: $survol;
     }
+    &:hover span {
+        color: $survol;
+    }
 
     p{
         transition-duration: 0.5s;
@@ -323,6 +334,7 @@ main{
         line-height: 150px;
         span{
             font-size: 32px;
+            transition-duration: 0.5s;
         }
     }
 }
@@ -358,10 +370,9 @@ main{
 }
 
 
-// Responsive navbar
+// Responsive ipad et smartphone
 @media (max-width: 1080px) { 
     header{
-
         nav{
             display: none;
             visibility: hidden;
@@ -370,6 +381,23 @@ main{
             display: none;
             visibility: hidden;
         }
+    }
 
+    main{
+        flex-direction: column;
+        align-items: center;
+        & > div{
+            box-shadow: 1px 1px 2px white;
+            border-radius: 20px;
+            width: 80vw;
+            margin-bottom: 50px;
+    
+            &:hover{
+                box-shadow: 2px 2px 10px $survol;
+            }
+        }
+    }
+    .transactions, .profil, .asset{
+        width: 90vw;
     }
 }
