--- a/style.css
+++ b/style.css
@@ -329,15 +329,19 @@ main {
           justify-content: space-between;
 }
 
-main > div {
+main > div:not(.asset) {
   -webkit-box-shadow: 1px 1px 2px white;
           box-shadow: 1px 1px 2px white;
   border-radius: 20px;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
 }
 
-main > div:hover {
+main > div:not(.asset):hover {
   -webkit-box-shadow: 2px 2px 10px #3d8bff;
           box-shadow: 2px 2px 10px #3d8bff;
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 
 .profil {
@@ -357,7 +361,6 @@ main > div:hover {
   padding: 10px;
   width: 100%;
   height: 50%;
-  background-color: green;
 }
 
 .profil .details {
@@ -369,6 +372,15 @@ main > div:hover {
 
 .profil .details ul {
   list-style-type: none;
+}
+
+.profil .details li {
+  margin-top: 10px;
+}
+
+.profil .details i {
+  margin-right: 2%;
+  opacity: .4;
 }
 
 .transactions {
@@ -416,40 +428,39 @@ main > div:hover {
 
 .asset {
   width: 30vw;
-  background-color: #111213;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
-.add_asset {
-  border-radius: 5px;
-  border: 2px dotted white;
+.asset_item.add_asset {
+  border-radius: 10px;
+  border: 3px dotted #4d4d56;
   cursor: pointer;
-  width: 100%;
-  background-color: wheat;
+  width: 70%;
+  background-color: #111213;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
 }
 
-.add_asset:hover {
+.asset_item.add_asset:hover {
   border-color: #3d8bff;
 }
 
-.add_asset:hover p {
+.asset_item.add_asset:hover p {
   color: #3d8bff;
 }
 
-.add_asset:hover span {
+.asset_item.add_asset:hover span {
   color: #3d8bff;
 }
 
-.add_asset p {
+.asset_item.add_asset p {
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
   color: white;
@@ -457,7 +468,7 @@ main > div:hover {
   line-height: 150px;
 }
 
-.add_asset p span {
+.asset_item.add_asset p span {
   font-size: 32px;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
@@ -466,7 +477,7 @@ main > div:hover {
 .asset_item {
   width: 48%;
   height: 150px;
-  background-color: #1d1d20;
+  background-color: #111213;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
