--- a/style.scss
+++ b/style.scss
@@ -234,14 +234,17 @@ main{
     padding: 40px;
     justify-content: space-between;
     
-    & > div{
+    & > div:not(.asset){
         box-shadow: 1px 1px 2px white;
         border-radius: 20px;
+        transition-duration: 0.3s;
 
         &:hover{
             box-shadow: 2px 2px 10px $survol;
+            transform: scale(1.02);
         }
     }
+
 }
 
 .profil{
@@ -255,7 +258,7 @@ main{
         padding: 10px;
         width: 100%;
         height: 50%;
-        background-color: green;
+
     }
 
     .details{
@@ -265,7 +268,13 @@ main{
         height: 50%;
         ul{
             list-style-type: none;
-
+        }
+        li{
+            margin-top: 10px;
+        }
+        i{
+            margin-right: 2%;
+            opacity: .4;
         }
     }
 }
@@ -303,18 +312,17 @@ main{
 
 .asset{
     width: 30vw;
-    background-color: $dark_gray;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
-.add_asset{
-    border-radius: 5px;
-    border : 2px dotted white;
+.asset_item.add_asset{
+    border-radius: 10px;
+    border : 3px dotted lighten($gray, 20%);
     cursor: pointer;
-    width: 100%;
-    background-color: wheat;
+    width: 70%;
+    background-color: $dark_gray;
     transition-duration: 0.5s;
 
     &:hover{
@@ -342,7 +350,7 @@ main{
 .asset_item{
     width: 48%;
     height: 150px;
-    background-color: $gray;
+    background-color: $dark_gray;
     display: flex;
     flex-direction: column;
     .crypto{
