--- a/style.css
+++ b/style.css
@@ -465,6 +465,14 @@ main > div:not(.asset):hover {
   color: gray;
 }
 
+.transactions p:not(.time) {
+  cursor: pointer;
+}
+
+.transactions p:not(.time):hover {
+  color: #3d8bff;
+}
+
 .asset {
   width: 30vw;
   display: -webkit-box;
@@ -569,18 +577,24 @@ main > div:not(.asset):hover {
         -ms-flex-align: center;
             align-items: center;
   }
-  main > div {
+  main > div:not(.asset) {
     -webkit-box-shadow: 1px 1px 2px white;
             box-shadow: 1px 1px 2px white;
     border-radius: 20px;
     width: 80vw;
     margin-bottom: 50px;
   }
-  main > div:hover {
+  main > div:not(.asset):hover {
     -webkit-box-shadow: 2px 2px 10px #3d8bff;
             box-shadow: 2px 2px 10px #3d8bff;
   }
   .transactions, .profil, .asset {
+    width: 90vw;
+  }
+  .transactions i {
+    bottom: 2px;
+  }
+  .asset_item.add_asset {
     width: 90vw;
   }
 }
