--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,7 @@ body{
 
 
 header{
+    position: relative;
     animation-fill-mode: backwards;
     animation-name: blur;
     animation-duration: 3s;
@@ -84,6 +85,28 @@ header{
     &:hover{
         box-shadow: 0px 2px 20px $survol;
     }
+}
+
+.navSmartphone{
+    height: 100vh;
+    width: 70vw;
+    position: absolute;
+    top: 0;
+    background-color: $dark_gray;
+    transform: translateX(-100%);
+    z-index: 10000;
+    transition-duration: 0.5s;
+}
+
+.navSmartphoneRight{
+    height: 100vh;
+    width: 70vw;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-color: red;
+    transform: translateX(100%);
+    z-index: 10000;
 }
 
 .nav{
@@ -152,6 +175,29 @@ li:nth-child(1){
     }
 }
 
+.btnNav{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    border-radius: 50%;
+    z-index: 100;
+    visibility: hidden;
+    cursor: pointer;
+}
+
+.btnNav--Left{
+    left: 10px;
+    top: 50%;
+    background-color: green;
+    transform: translateY(-50%);
+}
+
+.btnNav--Right{
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
 
 
 .links_account{
@@ -389,6 +435,15 @@ main{
         height: 70%;
         width: 100%;
         background-color: $dark_gray;
+        padding: 10px 0px 20px 20px;
+        p{
+            font-size: 30px;
+        }
+        p:nth-child(2){
+            color: gray;
+            font-style: italic;
+            font-size: 25px;
+        }
     }
     .list_btn{
         height: 30%;
@@ -442,6 +497,9 @@ main{
             display: none;
             visibility: hidden;
         }
+        .btnNav{
+            visibility:visible;
+        }
     }
 
     main{
@@ -466,8 +524,13 @@ main{
         i{
             bottom: 2px;
         }
+        &__list p{
+            font-size: 12px;
+        }
     }
     .asset_item.add_asset{
         width: 90%;
     }
+
+
 }
