--- a/style.scss
+++ b/style.scss
@@ -96,6 +96,7 @@ header{
     transform: translateX(-100%);
     z-index: 10000;
     transition-duration: 0.5s;
+    visibility: hidden;
 }
 
 .navSmartphoneRight{
@@ -532,5 +533,7 @@ main{
         width: 90%;
     }
 
-
+    .navSmartphone{
+        visibility: visible;
+    }
 }
