--- a/style.scss
+++ b/style.scss
@@ -598,6 +598,9 @@ main{
     .navSmartphone{
         visibility: visible;
         width: 75vw;
+        ul{
+            font-size: 25px;
+        }
     }
 
 }
