Micro-ajustement ff pour smartphone

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ html {
 
 body {
   background-color: #1d1d20;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier Prime', monospace;
   -webkit-animation-name: body_loader;
           animation-name: body_loader;
 }
