--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@ html{
 
 body{
     background-color: $gray;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Courier Prime', monospace;
     animation-name: body_loader;
 }
 
