--- a/style.scss
+++ b/style.scss
@@ -357,6 +357,11 @@ main{
         padding: 10px;
         width: 100%;
         height: 50%;
+        .crypto_logo{
+            width: 100%;
+            height: 100%;
+            background-color: red;
+        }
 
     }
 
